# scrape-shop

./: Cargo.toml  README.md  books.csv
src/: lib.rs  main.rs
